# numethods

./: .gitignore  README.md  pyproject.toml
examples/: demo.py
numethods/: __init__.py  differentiation.py  eigen.py  exceptions.py  fitting.py  interpolation.py  linalg.py  ode.py  orthogonal.py  quadrature.py  roots.py  solvers.py  utils.py
tests/: test_basic.py
tutorials/: README.md  tutorial1_vectors_matrices.ipynb  tutorial2_linear_systems.ipynb  tutorial3_orthogonalization.ipynb  tutorial4_root_finding.ipynb  tutorial5_interpolation.ipynb  tutorial6_eigenvalues_svd.ipynb  tutorial7_ode_solvers.ipynb  tutorial8_quadrature_differentiation.ipynb  tutorial9_curve_fitting.ipynb
