[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "numethods"
version = "0.1.0"
description = "Some numerical methods implemented in Python"
authors = [
    { name = "Deniz Donmez", email = "denzdonmez@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

[tool.setuptools.packages.find]
where = ["."]
include = ["numethods"]
